--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "@tsparticles/all": "^3.0.3",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.3",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
@@ -17,7 +20,8 @@
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
-    "swiper": "^11.0.5"
+    "swiper": "^11.0.5",
+    "tsparticles": "^3.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
