--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
+    "react-responsive": "^9.0.2",
     "swiper": "^11.0.5",
     "tsparticles": "^3.0.3"
   },
