--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
     "react-dom": "^18",
