--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "@tsparticles/all": "^3.0.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.8.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-animated-cursor": "^2.11.2",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
     "react-icons": "^4.12.0",
+    "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "swiper": "^11.0.5",
-    "tsparticles": "^3.0.3"
+    "tsparticles": "^3.0.3",
+    "universal-cookie": "^7.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
